{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 30,
  "lineage": "4cf8da27-6c5e-35c0-d926-94e7d72f7b52",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:subnet/subnet-0d40aed26cacf3843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet Public : Public Subnet 1"
                ]
              }
            ],
            "id": "subnet-0d40aed26cacf3843",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085387726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet Public : Public Subnet 1"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f7183d300594608c",
            "arn": "arn:aws:ec2:ap-south-1:491085387726:elastic-ip/eipalloc-0f7183d300594608c",
            "association_id": "eipassoc-06bef9b1d43fc5d13",
            "domain": "vpc",
            "id": "eipalloc-0f7183d300594608c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-070b31dd0d0f8593d",
            "private_dns": "ip-10-0-3-202.ap-south-1.compute.internal",
            "private_ip": "10.0.3.202",
            "public_dns": "ec2-13-203-10-209.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.10.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07511713b9d6b0e0a",
            "arn": "arn:aws:ec2:ap-south-1:491085387726:elastic-ip/eipalloc-07511713b9d6b0e0a",
            "association_id": "eipassoc-04c4734762e6f2493",
            "domain": "vpc",
            "id": "eipalloc-07511713b9d6b0e0a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-004416ae66a181bd6",
            "private_dns": "ip-10-0-4-170.ap-south-1.compute.internal",
            "private_ip": "10.0.4.170",
            "public_dns": "ec2-65-0-8-166.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.8.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e35ddab05955cf57",
            "arn": "arn:aws:ec2:ap-south-1:491085387726:instance/i-0aec2f49457d4588c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aec2f49457d4588c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3921fffb28efabd",
            "private_dns": "ip-10-0-1-213.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aca6b6b822f9b898",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d40aed26cacf3843",
            "tags": {
              "Name": "Ec2_public_subnet 1"
            },
            "tags_all": {
              "Name": "Ec2_public_subnet 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2a4b5547aa6ad59"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_key_pair.deployement_key_pair",
            "aws_route_table.public_route_table",
            "aws_route_table_association.public_subnet_association",
            "aws_security_group.sg_vpc_ap_south_1",
            "aws_subnet.aws-demo-Public-Subnet",
            "aws_vpc.vpc-ap-south-1",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:internet-gateway/igw-0fd3fe7b47dd4609c",
            "id": "igw-0fd3fe7b47dd4609c",
            "owner_id": "491085387726",
            "tags": {
              "Name": "IGW : Public_ap-south-1"
            },
            "tags_all": {
              "Name": "IGW : Public_ap-south-1"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f7183d300594608c",
            "association_id": "eipassoc-06bef9b1d43fc5d13",
            "connectivity_type": "public",
            "id": "nat-051e5e92000b52d97",
            "network_interface_id": "eni-070b31dd0d0f8593d",
            "private_ip": "10.0.3.202",
            "public_ip": "13.203.10.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac1304cff8ff12c1",
            "tags": {
              "Name": "Private NAT Gateway"
            },
            "tags_all": {
              "Name": "Private NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07511713b9d6b0e0a",
            "association_id": "eipassoc-04c4734762e6f2493",
            "connectivity_type": "public",
            "id": "nat-0de0b4b975c492d60",
            "network_interface_id": "eni-004416ae66a181bd6",
            "private_ip": "10.0.4.170",
            "public_ip": "65.0.8.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f96750eaf40602a7",
            "tags": {
              "Name": "Private NAT Gateway"
            },
            "tags_all": {
              "Name": "Private NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:route-table/rtb-0bad7431889edd2ce",
            "id": "rtb-0bad7431889edd2ce",
            "owner_id": "491085387726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051e5e92000b52d97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:route-table/rtb-00d8e19fea69cf907",
            "id": "rtb-00d8e19fea69cf907",
            "owner_id": "491085387726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de0b4b975c492d60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:route-table/rtb-08df5124364d05d3b",
            "id": "rtb-08df5124364d05d3b",
            "owner_id": "491085387726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd3fe7b47dd4609c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b587ad714c963f6e",
            "route_table_id": "rtb-0bad7431889edd2ce",
            "subnet_id": "subnet-0ac1304cff8ff12c1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7e4555f05efec6a",
            "route_table_id": "rtb-00d8e19fea69cf907",
            "subnet_id": "subnet-0f96750eaf40602a7"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.aws-demo-Private-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef4a4dd9520f1eb8",
            "route_table_id": "rtb-08df5124364d05d3b",
            "subnet_id": "subnet-0d40aed26cacf3843"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.aws-demo-Public-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff4c779a03a98aa",
            "route_table_id": "rtb-08df5124364d05d3b",
            "subnet_id": "subnet-0ec69b8e9a994bda1"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.aws-demo-Public-Subnet",
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_ap_south_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:security-group/sg-0c2a4b5547aa6ad59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2a4b5547aa6ad59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250404054103158000000001",
            "name_prefix": "terraform-",
            "owner_id": "491085387726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg: vpc_ap-south-1"
            },
            "tags_all": {
              "Name": "sg: vpc_ap-south-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-demo-Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:subnet/subnet-0ac1304cff8ff12c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac1304cff8ff12c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085387726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet Private : Private Subnet 1"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:subnet/subnet-0f96750eaf40602a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f96750eaf40602a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085387726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet Private : Private Subnet 2"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-demo-Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:subnet/subnet-0d40aed26cacf3843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d40aed26cacf3843",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085387726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet Public : Public Subnet 1"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:subnet/subnet-0ec69b8e9a994bda1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec69b8e9a994bda1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085387726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet Public : Public Subnet 2"
            },
            "vpc_id": "vpc-004b15312971d1f90"
          },
          "dependencies": [
            "aws_vpc.vpc-ap-south-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-ap-south-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:491085387726:vpc/vpc-004b15312971d1f90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00708b278c47924ba",
            "default_route_table_id": "rtb-048bfd5aa967b251f",
            "default_security_group_id": "sg-04b13601744a168b9",
            "dhcp_options_id": "dopt-0cd8a8138479ab7a0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004b15312971d1f90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048bfd5aa967b251f",
            "owner_id": "491085387726",
            "tags": {
              "Name": "VPC: ap-south-1"
            },
            "tags_all": {
              "Name": "VPC: ap-south-1"
            }
          }
        }
      ]
    }
  ]
}